# rel2sql

./: .bazelrc  .clang-tidy  .editorconfig  .envrc  .gitignore  .gitmodules  .lldbinit  .lldbinit.example  .pre-commit-config.yaml  AGENTS.md  BUILD  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  Taskfile.yml  antlr.bzl  cspell.json  test_equality.py
.github/: pull_request_remplate.md  pull_request_template.md
.github/workflows/: package-consume-test.yml  publish-wasm.yml  test.yml
app/: main.cc
apps/cli/: main.cc
bazel/: antlr.bzl
benchmarks/TPCH/: BUILD.bazel  README.md  export.jl  generator.jl  params.jl  tpch.jl  utils.jl  validator.jl
benchmarks/TPCH/data/: .gitignore  README.md
benchmarks/TPCH/pipeline/: README.md  manifest.json  manifest_data.h  tpch_pipeline_lib.cc  tpch_pipeline_lib.h  tpch_pipeline_test.cc  tpch_runner_main.cc
benchmarks/TPCH/rel/: rel.jl  tpch_common_defs.rel  tpch_dataload.rel  tpch_dataload_schema_mapping.rel  tpch_edb.edb  tpch_edb_duckdb_date_types.edb  tpch_edb_duckdb_types.edb  tpch_schema.rel  tpch_schema_mapping.rel
benchmarks/TPCH/rel/queries/: 1.rel  10.rel  11.rel  12.rel  13.rel  14.rel  15.rel  16.rel  17.rel  18.rel  19.rel  2.rel  20.rel  21.rel  22.rel  3.rel  4.rel  5.rel  6.rel  7.rel  8.rel  9.rel
benchmarks/TPCH/sql/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
build_defs/: BUILD
ci/: prepare-package-dist.sh  prompt-confirm.sh  set-version-from-tag.sh  trigger-vercel-redeploy.sh
docs/: experiment-task.md  tpch-rel2sql-roundtrip-catalog.md  translation1.md
examples/: manual-formula-suite.rel
grammar/: PrunedCoreRelParser.g4  RelLexer.g4  RelParser.g4  SqlLexer.g4  SqlParser.g4
include/: rel2sql.h
include/rel2sql/: edb_file.h  rel2sql.h
scripts/: BUILD.bazel  gen_tpch_edb.py  gen_tpch_manifest_cc.py  rel_engine_ping.sh  rel_engine_start.sh  rel_engine_status.sh  rel_engine_stop.sh  rel_run.sh  tag.sh  tpch_build_duckdb.py  tpch_emit_sql.sh  tpch_explain_bench.py  tpch_explain_summary_csv.py  tpch_full_db_run.sh  tpch_rewrite.py  tpch_smoke.sh
src/: BUILD  error_listener.cc  error_listener.h  exceptions.cc  exceptions.h  main.cc  main.cpp  python_bindings.cpp  rel2sql.cc  sql.cc  sql.h  sql_parse.cc  sql_parse.h  sql_parser_visitor.cc  sql_parser_visitor.h  sql_visitor.cc  sql_visitor.h  translate.h
src/antlr/: .gitignore  rel.g4
src/api/: rel2sql.cc  translate.h
src/grammar/: RelLexer.g4  RelParser.g4  SqlParser.g4
src/optimizer/: BUILD  base_optimizer.h  canonical_form.cc  canonical_form.h  canonical_form_visitor.cc  canonical_form_visitor.h  constant_optimizer.cc  constant_optimizer.h  cte_inliner.cc  cte_inliner.h  cte_optimizer.cc  cte_optimizer.h  cte_redundancy_optimizer.cc  cte_redundancy_optimizer.h  expression_simplifier_optimizer.cc  expression_simplifier_optimizer.h  flattener_optimizer.cc  flattener_optimizer.h  opt_visitor.cc  opt_visitor.h  optimizer.h  replacers.h  select_column_rebinder.cc  select_column_rebinder.h  self_join_optimizer.cc  self_join_optimizer.h  table_alias_renumberer.cc  table_alias_renumberer.h  validating_optimizer.h
src/parser/: BUILD  CoreRelParser.g4  PrunedCoreRelParser.g4  Rel.g4  RestrictedCoreRelParser.g4  error_listener.cc  extended_ast.h  fv_visitor.cc  fv_visitor.h  lit_visitor.cc  lit_visitor.h  parse.h  sql.h  sql_parse.cc  sql_parse.h  sql_parser_visitor.cc  sql_parser_visitor.h  sql_visitor.cc  sql_visitor.h
src/preproc/: BUILD  arity_visitor.cc  arity_visitor.h  balancing_visitor.cc  balancing_visitor.h  base_visitor.cc  base_visitor.h  ids_visitor.cc  ids_visitor.h  lit_visitor.cc  lit_visitor.h  preprocessor.h  recursion_visitor.cc  recursion_visitor.h  safe_visitor.cc  safe_visitor.h  vars_visitor.cc  vars_visitor.h
src/preprocessing/: arity_visitor.cc  arity_visitor.h  arity_visitor_rel.cc  arity_visitor_rel.h  balancing_visitor.cc  balancing_visitor.h  balancing_visitor_rel.cc  balancing_visitor_rel.h  base_visitor.h  builtin_resolver.cc  builtin_resolver.h  fixpoint_safety_visitor.cc  fixpoint_safety_visitor.h  fixpoint_safety_visitor_rel.cc  fixpoint_safety_visitor_rel.h  ids_visitor.cc  ids_visitor.h  ids_visitor_rel.cc  ids_visitor_rel.h  lit_visitor.cc  lit_visitor.h  lit_visitor_rel.cc  lit_visitor_rel.h  preprocessor.h  preprocessor_rel.h  recursion_visitor.cc  recursion_visitor.h  recursion_visitor_rel.cc  recursion_visitor_rel.h  safe_visitor.cc  safe_visitor.h  safe_visitor_rel.cc  safe_visitor_rel.h  safety_inferrer.cc  safety_inferrer.h  safety_visitor.cc  safety_visitor.h  term_polynomial_visitor.cc  term_polynomial_visitor.h  term_polynomial_visitor_rel.cc  (+7 more)
src/rel_ast/: bindings_bound.h  bound.cc  bound.h  bound_set.cc  bound_set.h  domain.cc  domain.h  edb_info.h  extended_ast.cc  extended_ast.h  projection.cc  projection.h  rel_ast.cc  rel_ast.h  rel_ast_builder.cc  rel_ast_builder.h  rel_ast_container.cc  rel_ast_container.h  rel_ast_visitor.cc  rel_ast_visitor.h  rel_context.cc  rel_context.h  rel_context_builder.cc  rel_context_builder.h  relation_info.h
src/rewriter/: base_rewriter.cc  base_rewriter.h  binding_domain_rewriter.cc  binding_domain_rewriter.h  binding_rewriter.cc  binding_rewriter.h  (+10 more)
tests/: BUILD  duckdb_exec.cc  duckdb_exec.h  my_test.cc  test_bound_set.cc  test_common.h  test_corpus_correctness.cc  test_exceptions.cc  test_extended_ast.cc  test_free_vars.cc  test_generated_correctness.cc  test_generated_correctness_raicode.cc  test_optimization.cc  test_rel_ast.cc  test_rewriter.cc  test_safety.cc  test_sql.cc  test_sql_ast.cc  test_sql_parser.cc  test_sql_parser_roundtrip.cc  test_translation.cc
wasm/: .bazelrc  BUILD  MODULE.bazel  README.md  TESTING.md  bindings.cc  setup_browser_test.mjs  test_wasm.html  test_wasm.js  test_wasm.mjs
wasm/tests/: bindings_test.mjs  load_wasm_module.mjs  npm_browser_smoke_test.mjs  npm_package_test.mjs  npm_package_test_runner.mjs  npm_smoke_test.mjs
wasm/tests/browser/: test_browser.html
(+106 files in other folders)
