###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
"Module for com_foo_bar"

ANTLR4_VERSION = "4.13.1"

bazel_dep(name = "antlr4-cpp-runtime", version = "4.12.0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "antlr4_jar",
    urls = ["https://www.antlr.org/download/antlr-" + ANTLR4_VERSION + "-complete.jar"],
    sha256 = "bc13a9c57a8dd7d5196888211e5ede657cb64a3ce968608697e4f668251a8487",
)

# Utility dependencies
bazel_dep(name = "fmt", version = "10.2.1")  # Formatting strings
bazel_dep(name = "spdlog", version = "1.13.0")  # Logging

# Testing dependencies
bazel_dep(name = "googletest", version = "1.14.0")

# Python bindings
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "rules_python", version = "0.34.0")
