###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
"Module for com_foo_bar"
module(
    name = "rel2sql_core",
    version = "1.0.0"
)

ANTLR4_VERSION = "4.13.1"

bazel_dep(name = "antlr4-cpp-runtime", version = "4.12.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7"
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "antlr4_jar",
    urls = ["https://www.antlr.org/download/antlr-" + ANTLR4_VERSION + "-complete.jar"],
    sha256 = "bc13a9c57a8dd7d5196888211e5ede657cb64a3ce968608697e4f668251a8487",
)

# Utility dependencies
bazel_dep(name = "fmt", version = "9.1.0")  # Formatting strings - older version for Emscripten compatibility
bazel_dep(name = "spdlog", version = "1.11.0")  # Logging - compatible with fmt 9.1.0

# Testing dependencies
bazel_dep(name = "googletest", version = "1.17.0")

# C++ rules
bazel_dep(name = "rules_cc", version = "0.0.9")

# Java rules
bazel_dep(name = "rules_java", version = "6.6.0")

# Emscripten SDK Bazel integration
bazel_dep(name = "emsdk", version = "4.0.13")

# Node.js rules for testing
bazel_dep(name = "aspect_rules_js", version = "2.6.2")
