###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "rel2sql_core",
    version = "1.0.0",
)

# Java ANTLR tool JAR version (codegen). C++ runtime is a separate bazel_dep below;
# bump both together only when intentionally upgrading the whole stack.
ANTLR4_VERSION = "4.13.1"

bazel_dep(name = "antlr4-cpp-runtime", version = "4.12.0")

# compile_commands.json extraction (clangd). Upstream: hedronvision fork;
# this repo uses git_override to pin a specific fork commit (see README / AGENTS.md).
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_jar(
    name = "antlr4_jar",
    urls = ["https://www.antlr.org/download/antlr-" + ANTLR4_VERSION + "-complete.jar"],
    sha256 = "bc13a9c57a8dd7d5196888211e5ede657cb64a3ce968608697e4f668251a8487",
)

# DuckDB C++ library (test-only); platform archives from official releases.
http_archive(
    name = "duckdb_lib_linux_amd64",
    build_file = "//third_party/duckdb:BUILD.linux.bazel",
    sha256 = "91b06f8d4bca471bab4f46c676ae2a58c9ca18987d0ec3d25fd95aabaf9eef3e",
    urls = ["https://github.com/duckdb/duckdb/releases/download/v1.2.2/libduckdb-linux-amd64.zip"],
)

http_archive(
    name = "duckdb_lib_osx_universal",
    build_file = "//third_party/duckdb:BUILD.macos.bazel",
    sha256 = "150588828afd4e84cc7b13f69ba62247147a20c814a8b9a21efa55531d2fd3c9",
    urls = ["https://github.com/duckdb/duckdb/releases/download/v1.2.2/libduckdb-osx-universal.zip"],
)

# Utility dependencies
bazel_dep(name = "fmt", version = "9.1.0")  # Formatting strings - older version for Emscripten compatibility
bazel_dep(name = "spdlog", version = "1.11.0")  # Logging - compatible with fmt 9.1.0

# Testing dependencies
bazel_dep(name = "googletest", version = "1.17.0")

# C++ rules
bazel_dep(name = "rules_cc", version = "0.1.1")

# Constraint values for select() (e.g. @platforms//os:linux)
bazel_dep(name = "platforms", version = "0.0.11")

# Java rules
bazel_dep(name = "rules_java", version = "8.14.0")

# Emscripten SDK Bazel integration
bazel_dep(name = "emsdk", version = "4.0.13")

# Node.js rules for testing
bazel_dep(name = "aspect_rules_js", version = "2.6.2")
