# WASM-specific Bazel module
# This module isolates WASM builds from the main rel2sql dependencies

module(
    name = "rel2sql_wasm",
    version = "1.0.0",
)

# Import the core rel2sql module
bazel_dep(name = "rel2sql_core", version = "1.0.0")

# Emscripten SDK for WASM builds
bazel_dep(name = "emsdk", version = "4.0.13")

# WASM-specific dependencies
bazel_dep(name = "platforms", version = "0.0.10")

# Override the core module to use local path
local_path_override(
    module_name = "rel2sql_core",
    path = "..",
)
